--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/index.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/TanyaVlasova/learning-english/issues"
   },
-  "homepage": "https://github.com/TanyaVlasova/learning-english#readme"
+  "homepage": "https://github.com/TanyaVlasova/learning-english#readme",
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
